# Tomo

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENCE  MakeFile  Makefile  README.md  a.out  compile_flags.txt  test  test.c  test.py  test.txt  theme.ini
.github/workflow/: release.yml
.github/workflows/: release.yml
cobalt.out.dSYM/Contents/: Info.plist
cobalt.out.dSYM/Contents/Resources/Relocations/aarch64/: cobalt.out.yml
include/: clip.h  command_palette.h  common.h  cursor.h  deletion.h  draw.h  edit.h  editor.h  file_tree.h  fileio.h  find.h  ini_parser.h  init.h  input.h  new_line.h  select.h  status_bar.h  syntax.h  themes.h  undo.h  utils.h
src/: a.out  clip.c  command_palette.c  common.c  config.h  cursor.c  cursor_pos.txt  cursor_pos_temp.txt  deletion.c  draw.c  edit.c  editor.c  editor.h  file_tree.c  fileio.c  fileio.h  find.c  ini_parser.c  init.c  input.c  main.c  new_line.c  select.c  select.h  status_bar.c  syntax.c  themes.c  tree-test.c  tree_test.c  undo.c  utils.c
src/ui/: status_bar.c  status_bar.h  tab.h
src/utils/: common.c  common.h  fileio.c  fileio.h
themes/: dark.ini  dracula.ini  gruvbox.ini  light_solarized.ini  monokai.ini  nord.ini  one_dark.ini  solarized_dark.ini  tomorrow_night.ini  zenburn.ini
